--- a/project.config.json
+++ b/project.config.json
@@ -1,7 +1,7 @@
 {
 	"description": "项目配置文件。",
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -9,8 +9,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.9",
-	"appid": "wx471f2f8b7dc399e3",
-	"projectname": "%E7%94%BB%E4%BD%A0",
+	"appid": "wxa6002192b3087ec7",
+	"projectname": "hbnwxapp",
 	"condition": {
 		"search": {
 			"current": -1,
