--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "pages": [
-    "pages/profile/profile",
-    "pages/index/index",
     
+    "pages/index/index",
+    "pages/profile/profile",
     "pages/order-confirm/order-confirm",
     "pages/myaddress/myaddress",
     "pages/comment/comment",
@@ -17,7 +17,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "画你范冰冰精选",
+    "navigationBarTitleText": "HoneyLiuX",
     "navigationBarTextStyle": "black",
     "backgroundColor": "#f6f6f6"
 
